# OkiagariKoboshi

./: .gitignore  README.md
assets/launch/: okiagarikoboshi.launch
assets/meshes/: Arm1.stl  Arm2.stl  Base.stl  Battery.stl  M5Atom.stl  STS3032.stl  STS3032_Horn.stl
assets/urdf/: okiagarikoboshi.urdf
assets/usd/: .asset_hash  config.yaml  okiagarikoboshi.usd
cad/: Arm1.ipt  Arm1.stp  Arm2.ipt  Arm2.stp  Base.ipt  Base.stp  Battery.ipt  M5Atom.ipt  M5Stack_Core2.stp  OkiagariKoboshi.iam  STS3032.ipt  STS3032_Horn.ipt
cad/OldVersions/: Arm1.0011.ipt  Arm1.0013.ipt  Arm2.0005.ipt  Base.0004.ipt  Base.0010.ipt  OkiagariKoboshi.0009.iam  OkiagariKoboshi.0013.iam
docker/: Dockerfile  compose.isaaclab.yml
docs/: Environment.md
firmware/M5AtomMATRIX_Okiagari/: platformio.ini
isaac/scripts/: getup_motion_test.py  (+2 more)
source/okiagari_koboshi_ext/: pyproject.toml
source/okiagari_koboshi_ext/okiagari_koboshi_ext/: __init__.py
source/okiagari_koboshi_ext/okiagari_koboshi_ext.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
source/okiagari_koboshi_ext/okiagari_koboshi_ext/tasks/: __init__.py
source/okiagari_koboshi_ext/okiagari_koboshi_ext/tasks/direct/: __init__.py
source/okiagari_koboshi_ext/okiagari_koboshi_ext/tasks/direct/okiagari_getup/: __init__.py  okiagari_getup_env.py
source/okiagari_koboshi_ext/okiagari_koboshi_ext/tasks/direct/okiagari_getup/agents/: __init__.py  rsl_rl_ppo_cfg.py
source/okiagari_koboshi_ext/okiagari_koboshi_ext/tasks/direct/okiagari_getup/references/: getup_reference.py
tools/: export_policy_to_c.py
(+9 files in other folders)
