[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "okiagari-koboshi-ext"
version = "0.1.0"
description = "Isaac Lab task extension for Okiagari Koboshi robot"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["okiagari_koboshi_ext*"]

[project.entry-points."gymnasium.envs"]
okiagari_koboshi_ext = "okiagari_koboshi_ext"
